# linuxcnc

./: CMakeLists.txt  README.md  install.txt
cmake/: CMakeLists.txt  make_find_list.txt
cmake/build-libhalui-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/build-libhalui-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-6a7e48bdce9df08a53b5.json  cmakeFiles-v1-8f9bdb943c43c7826dc4.json  codemodel-v2-1cf0ccf8c5abaaa7acda.json  index-2022-11-21T08-23-04-0343.json  target-libhalui-Debug-ba8d46d298ca49bcc567.json
cmake/classicladder/: CMakeLists.txt  classicladder
cmake/classicladder_src/: arithm_eval.c  classicladder.c  emc_mods.c
cmake/components/5axiskins/: CMakeLists.txt
cmake/components/corexykins/: CMakeLists.txt
cmake/components/ethercat/: CMakeLists.txt
cmake/components/genhexkins/: CMakeLists.txt
cmake/components/genserkins/: CMakeLists.txt
cmake/components/lineardeltakins/: CMakeLists.txt
cmake/components/maxkins/: CMakeLists.txt
cmake/components/pentakins/: CMakeLists.txt
cmake/components/pumakins/: CMakeLists.txt
cmake/components/rosekins/: CMakeLists.txt
cmake/components/rotarydeltakins/: CMakeLists.txt
cmake/components/rotatekins/: CMakeLists.txt
cmake/components/sc_tp/: CMakeLists.txt
cmake/components/sc_tp_src/: sc_block.c  sc_block.h  sc_conversion.c  sc_conversion.h  sc_extern.h  sc_lines.cpp  sc_optimizer.cpp  sc_optimizer.h  sc_pid.cpp  sc_pid.h  sc_struct.cpp  sc_struct.h  sc_tp.c  simple_tp.c
cmake/components/sc_tp_src/ruckig/: sc_ruckig.cpp  sc_ruckig.h
cmake/components/scarakins/: CMakeLists.txt
cmake/components/scorbotkins/: CMakeLists.txt
cmake/components/scurve/: CMakeLists.txt  runtest  sc_engine.h  scurve.c
cmake/components/switchkins/: CMakeLists.txt
cmake/components/test/: CMakeLists.txt
cmake/components/test_src/: test.c
cmake/components/threads/: CMakeLists.txt
cmake/components/tp/: CMakeLists.txt
cmake/components/tripodkins/: CMakeLists.txt
cmake/components/trivkins/: CMakeLists.txt
cmake/components/ugenserkins/: CMakeLists.txt
cmake/components/xyzac-trt-kins/: CMakeLists.txt
cmake/components/xyzbc-trt-kins/: CMakeLists.txt
cmake/emc_src/: emclcd.cc  emcsh.cc  shcom.cc  tc.c  test.cpp  usrmotintf.cc
cmake/gcode_py/: CMakeLists.txt
cmake/hal_lib/: CMakeLists.txt
cmake/hal_py/: CMakeLists.txt
cmake/hal_tlc/: CMakeLists.txt
cmake/halcmd/: CMakeLists.txt  halcmd
cmake/halcmd_src/: halcmd_completion.c  halcmd_main.c
cmake/halmeter/: CMakeLists.txt  halmeter
cmake/halmeter_src/: meter.c
cmake/halrmt/: CMakeLists.txt  halrmt-0
cmake/halrmt_src/: halrmt.c
cmake/halscope/: CMakeLists.txt  halscope
cmake/halscope_src/: scope.c  scope_disp.c  scope_trig.c  scope_vert.c
cmake/halshow/: CMakeLists.txt
cmake/halui/: CMakeLists.txt  halui-0
cmake/io/: CMakeLists.txt  io
cmake/iov2/: CMakeLists.txt
cmake/libcanterp/: CMakeLists.txt
cmake/libcanterp_src/: canterp.cc
cmake/libhalui/: CMakeLists.txt
cmake/libhalui_src/: libhalui.cpp
cmake/liblinuxcnc/: CMakeLists.txt
cmake/liblinuxcnchal/: CMakeLists.txt
cmake/liblinuxcnchal_src/: hal.h  hal_lib.c
cmake/liblinuxcncini/: CMakeLists.txt
cmake/liblinuxcncini_src/: inifile.cc
cmake/libnml/: CMakeLists.txt
cmake/libposemath/: CMakeLists.txt
cmake/libposemath_src/: posemath.cc  posemath.h
cmake/libpyplugin/: CMakeLists.txt
cmake/librs274/: CMakeLists.txt
cmake/libtooldata/: CMakeLists.txt
cmake/lineardeltakins_py/: CMakeLists.txt
cmake/linuxcnc_module_helper/: CMakeLists.txt
cmake/linuxcnc_py/: CMakeLists.txt
cmake/linuxcnc_tlc/: CMakeLists.txt
cmake/linuxcnclcd/: CMakeLists.txt  linuxcnclcd
cmake/linuxcncrsh/: CMakeLists.txt  linuxcncrsh
cmake/linuxcncsrv/: CMakeLists.txt  linuxcncsrv
cmake/milltask/: CMakeLists.txt  milltask
cmake/module_helper/: CMakeLists.txt
cmake/motion_logger/: CMakeLists.txt  motion-logger
cmake/motion_src/: mot_priv.h
cmake/pci_read/: CMakeLists.txt
cmake/pci_write/: CMakeLists.txt
cmake/projects/qt_nml/: CMakeLists.txt  halui.cpp  halui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nml.h
cmake/projects/qt_occt/: CMakeLists.txt
cmake/projects/qt_ruckig_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/projects/qt_ruckig_gui/ruckig/: ruckig_traject.cpp  ruckig_traject.h
cmake/rotarydeltakins/: CMakeLists.txt
cmake/rotarydeltakins_py/: CMakeLists.txt
cmake/rtapi/: CMakeLists.txt
cmake/rtapi_src/: uspace_ulapi.c
cmake/sai/: CMakeLists.txt  rs274
cmake/schedrmt/: CMakeLists.txt  schedrmt
cmake/src/: arithm_eval.c  calc.c  classicladder.c  classicladder_gtk.c  config.c  config.h  config_gtk.c  drawing.c  edit.c  edit_sequential.c  editproperties_gtk.c  emc_mods.c  files.c  files_sequential.c  hal.h  halcmd.c  halcmd_commands.cc  halui.cc  inivar.cc  manager_gtk.c  protocol_modbus_master.c  rtapi_string.h  scope_horiz.c  socket_modbus_master.c  spy_vars_gtk.c  symbols.c  symbols_gtk.c  tp_types.h  uspace_common.h  uspace_rtapi_app.cc  uspace_ulapi.c  vars_names.c
cmake/togl_py/: CMakeLists.txt
cmake/togl_py_src/: _toglmodule.c
nc_files/: atest.ngc  test.ngc
src/: CMakeLists.txt  Makefile
src/emc/canterp/: CMakeLists.txt
src/emc/iotask/: Submakefile
src/emc/kinematics/python/lineardeltakins/: CMakeLists.txt
src/emc/kinematics/python/rotarydeltakins/: CMakeLists.txt
src/emc/nml_intf/: CMakeLists.txt  Submakefile
src/emc/pythonplugin/: CMakeLists.txt
src/emc/rs274ngc/: CMakeLists.txt
src/emc/rs274ngc/python/: CMakeLists.txt
src/emc/sai/: Submakefile
src/emc/task/: Submakefile
src/emc/tooldata/: CMakeLists.txt  Submakefile
src/emc/usr_intf/: CMakeLists.txt  Submakefile
src/emc/usr_intf/axis/: Submakefile
src/hal/components/: tp.c
src/hal/hal_lib/: CMakeLists.txt
src/hal/linuxcnchal/: CMakeLists.txt
src/hal/linuxcnchal/python/: CMakeLists.txt
src/hal/utils/hal/: CMakeLists.txt
src/libnml/: CMakeLists.txt
src/libnml/inifile/: CMakeLists.txt
src/libnml/posemath/: CMakeLists.txt
src/module_helper/: CMakeLists.txt
src/rtapi/: CMakeLists.txt
(+6 files in other folders)
